--- a/TaipeiGoodCoffee/Base.lproj/LaunchScreen.storyboard
+++ b/TaipeiGoodCoffee/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,27 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="luanch" translatesAutoresizingMaskIntoConstraints="NO" id="uk7-kH-hY9">
+                                <rect key="frame" x="236" y="236" width="128" height="128"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taipei Good Cafe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sk1-ZF-mjQ">
+                                <rect key="frame" x="223.5" y="195" width="153.5" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="UgR-FT-0nj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="uk7-kH-hY9" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Uee-Uc-bTs"/>
+                            <constraint firstItem="Sk1-ZF-mjQ" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="175" id="a2I-rW-XZZ"/>
+                            <constraint firstItem="Sk1-ZF-mjQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="lvu-fW-LYy"/>
+                            <constraint firstItem="uk7-kH-hY9" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="zCT-FP-l88"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +44,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="luanch" width="128" height="128"/>
+    </resources>
 </document>
