--- a/TaipeiGoodCoffee/Base.lproj/LaunchScreen.storyboard
+++ b/TaipeiGoodCoffee/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
@@ -17,11 +16,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="luanch" translatesAutoresizingMaskIntoConstraints="NO" id="uk7-kH-hY9">
-                                <rect key="frame" x="236" y="236" width="128" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="launch2" translatesAutoresizingMaskIntoConstraints="NO" id="uk7-kH-hY9">
+                                <rect key="frame" x="210" y="210" width="180" height="180"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taipei Good Cafe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sk1-ZF-mjQ">
-                                <rect key="frame" x="223.5" y="195" width="153.5" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sk1-ZF-mjQ">
+                                <rect key="frame" x="224" y="150" width="153.5" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="UgR-FT-0nj"/>
                                 </constraints>
@@ -30,10 +29,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.58823529411764708" green="0.93725490196078431" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="uk7-kH-hY9" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Uee-Uc-bTs"/>
-                            <constraint firstItem="Sk1-ZF-mjQ" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="175" id="a2I-rW-XZZ"/>
+                            <constraint firstItem="Sk1-ZF-mjQ" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="130" id="a2I-rW-XZZ"/>
                             <constraint firstItem="Sk1-ZF-mjQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="lvu-fW-LYy"/>
                             <constraint firstItem="uk7-kH-hY9" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="zCT-FP-l88"/>
                         </constraints>
@@ -45,6 +44,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="luanch" width="128" height="128"/>
+        <image name="launch2" width="180" height="180"/>
     </resources>
 </document>
