--- a/TaipeiGoodCoffee/Base.lproj/Main.storyboard
+++ b/TaipeiGoodCoffee/Base.lproj/Main.storyboard
@@ -1,40 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="CdI-Ho-zm3">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TaipeiGoodCoffee" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqb-s2-Uew">
-                                <rect key="frame" x="226" y="297" width="128" height="128"/>
-                                <state key="normal" image="luanch"/>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="eqb-s2-Uew" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Iqi-eR-3jL"/>
-                            <constraint firstItem="eqb-s2-Uew" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="wmY-C3-b8p"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-403" y="297"/>
-        </scene>
         <!--Login View Controller-->
         <scene sceneID="HFl-XD-XTB">
             <objects>
@@ -52,7 +23,7 @@
                                 <color key="color" red="1" green="0.43529412150000002" blue="0.81176471709999998" alpha="1" colorSpace="calibratedRGB"/>
                             </activityIndicatorView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.58823529409999997" green="0.93725490199999995" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="vp2-fv-5Kb" firstAttribute="centerY" secondItem="XNp-KH-qyU" secondAttribute="centerY" id="6Yw-Xp-Mo0"/>
                             <constraint firstItem="vp2-fv-5Kb" firstAttribute="centerX" secondItem="XNp-KH-qyU" secondAttribute="centerX" id="RcX-JI-czW"/>
@@ -646,51 +617,65 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AlH-FP-HBJ">
                                 <rect key="frame" x="0.0" y="280" width="600" height="86"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QOY-Es-mWw">
-                                        <rect key="frame" x="275" y="18" width="50" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="BdC-dQ-3iZ"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="djo-Md-X21"/>
-                                            <constraint firstAttribute="width" constant="50" id="idN-cO-6Hq"/>
-                                        </constraints>
-                                        <state key="normal" title="Facebook" image="facebook2"/>
-                                        <connections>
-                                            <action selector="fbFanPage:" destination="dl9-XB-Mwf" eventType="touchUpInside" id="1L9-Vp-vtN"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qP4-Du-x5j">
-                                        <rect key="frame" x="513" y="18" width="50" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="BUK-wH-wFq"/>
-                                            <constraint firstAttribute="height" constant="50" id="OJa-I3-MxD"/>
-                                        </constraints>
-                                        <state key="normal" title="Map" image="Map"/>
-                                        <connections>
-                                            <segue destination="19J-QZ-k3E" kind="show" identifier="showStoreMap" id="5YJ-8P-gwn"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ElM-p2-Kcy">
-                                        <rect key="frame" x="48" y="18" width="50" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="Tmm-do-dji"/>
-                                            <constraint firstAttribute="width" constant="50" id="eE8-kh-asW"/>
-                                        </constraints>
-                                        <state key="normal" title="Favourite" image="heart"/>
-                                        <connections>
-                                            <action selector="store_Favorites:" destination="dl9-XB-Mwf" eventType="touchUpInside" id="PhX-vl-imA"/>
-                                        </connections>
-                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="BOS-Y4-ev0">
+                                        <rect key="frame" x="48" y="18" width="260" height="50"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ElM-p2-Kcy">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="Tmm-do-dji"/>
+                                                    <constraint firstAttribute="width" constant="50" id="eE8-kh-asW"/>
+                                                </constraints>
+                                                <state key="normal" title="Favourite" image="heart"/>
+                                                <connections>
+                                                    <action selector="store_Favorites:" destination="dl9-XB-Mwf" eventType="touchUpInside" id="PhX-vl-imA"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QOY-Es-mWw">
+                                                <rect key="frame" x="70" y="0.0" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="BdC-dQ-3iZ"/>
+                                                    <constraint firstAttribute="width" constant="50" id="idN-cO-6Hq"/>
+                                                </constraints>
+                                                <state key="normal" title="Facebook" image="facebook2"/>
+                                                <connections>
+                                                    <action selector="fbFanPage:" destination="dl9-XB-Mwf" eventType="touchUpInside" id="1L9-Vp-vtN"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mbj-NK-mR7" userLabel="Share">
+                                                <rect key="frame" x="140" y="0.0" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="rDK-GK-Sdi"/>
+                                                    <constraint firstAttribute="height" constant="50" id="x74-AO-Hdj"/>
+                                                </constraints>
+                                                <state key="normal" title="Button" image="share"/>
+                                                <connections>
+                                                    <action selector="shereStores:" destination="dl9-XB-Mwf" eventType="touchUpInside" id="5Tx-TF-bAg"/>
+                                                </connections>
+                                            </button>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Sn2-am-0tm">
+                                                <rect key="frame" x="210" y="0.0" width="50" height="50"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qP4-Du-x5j">
+                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="50" id="BUK-wH-wFq"/>
+                                                            <constraint firstAttribute="height" constant="50" id="OJa-I3-MxD"/>
+                                                        </constraints>
+                                                        <state key="normal" title="Map" image="Map"/>
+                                                        <connections>
+                                                            <segue destination="19J-QZ-k3E" kind="show" identifier="showStoreMap" id="5YJ-8P-gwn"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.73410235499999998" blue="0.69113360499999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="qP4-Du-x5j" firstAttribute="top" secondItem="AlH-FP-HBJ" secondAttribute="top" constant="18" id="4ru-4H-qnb"/>
-                                    <constraint firstItem="qP4-Du-x5j" firstAttribute="leading" secondItem="QOY-Es-mWw" secondAttribute="trailing" constant="188" id="9xb-qh-hJT"/>
-                                    <constraint firstItem="ElM-p2-Kcy" firstAttribute="top" secondItem="AlH-FP-HBJ" secondAttribute="top" constant="18" id="Clr-Iw-D0i"/>
-                                    <constraint firstAttribute="trailing" secondItem="qP4-Du-x5j" secondAttribute="trailing" constant="37" id="QLo-Br-XL2"/>
-                                    <constraint firstItem="QOY-Es-mWw" firstAttribute="leading" secondItem="ElM-p2-Kcy" secondAttribute="trailing" constant="177" id="bLU-be-2m9"/>
-                                    <constraint firstItem="QOY-Es-mWw" firstAttribute="centerX" secondItem="AlH-FP-HBJ" secondAttribute="centerX" id="d0X-1i-fVC"/>
-                                    <constraint firstItem="QOY-Es-mWw" firstAttribute="centerY" secondItem="AlH-FP-HBJ" secondAttribute="centerY" id="moX-Gt-uh0"/>
-                                    <constraint firstItem="ElM-p2-Kcy" firstAttribute="leading" secondItem="AlH-FP-HBJ" secondAttribute="leading" constant="48" id="pta-hO-cjD"/>
+                                    <constraint firstItem="BOS-Y4-ev0" firstAttribute="centerY" secondItem="AlH-FP-HBJ" secondAttribute="centerY" id="aCV-Gi-Hll"/>
+                                    <constraint firstItem="BOS-Y4-ev0" firstAttribute="centerX" secondItem="AlH-FP-HBJ" secondAttribute="centerX" id="czR-gx-boe"/>
                                     <constraint firstAttribute="height" constant="86" id="xQJ-1t-oFz"/>
                                 </constraints>
                             </view>
@@ -769,7 +754,6 @@
                             <constraint firstItem="AlH-FP-HBJ" firstAttribute="top" secondItem="W3j-id-kfp" secondAttribute="bottom" constant="216" id="aIY-Mt-mzA"/>
                             <constraint firstAttribute="trailingMargin" secondItem="AlH-FP-HBJ" secondAttribute="trailing" constant="-20" id="byc-Pj-U3U"/>
                             <constraint firstItem="AlH-FP-HBJ" firstAttribute="leading" secondItem="q5c-z0-Phb" secondAttribute="leadingMargin" constant="-20" id="c4u-w4-fDt"/>
-                            <constraint firstItem="qP4-Du-x5j" firstAttribute="top" secondItem="A0N-ZI-pMA" secondAttribute="bottom" constant="26" id="fJS-Kc-sfQ"/>
                             <constraint firstItem="bET-2A-l9F" firstAttribute="top" secondItem="AlH-FP-HBJ" secondAttribute="bottom" id="hch-mG-Jo2"/>
                             <constraint firstAttribute="leadingMargin" secondItem="A0N-ZI-pMA" secondAttribute="leading" id="oqR-9i-wsE"/>
                             <constraint firstItem="AlH-FP-HBJ" firstAttribute="top" secondItem="A0N-ZI-pMA" secondAttribute="bottom" constant="8" id="rGR-UC-6mu"/>
@@ -848,7 +832,7 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Etu-sH-u8A" userLabel="info">
                                                 <rect key="frame" x="0.0" y="260" width="600" height="224"/>
                                                 <subviews>
-                                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WcE-Ad-nOR" userLabel="submit">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WcE-Ad-nOR" userLabel="submit">
                                                         <rect key="frame" x="8" y="186" width="584" height="30"/>
                                                         <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
@@ -1400,7 +1384,7 @@
                                                     <constraint firstAttribute="height" constant="30" id="54T-mb-b0n"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="台北市信義區市府路1號" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rzd-pg-Hhq">
                                                 <rect key="frame" x="122" y="112" width="284" height="30"/>
@@ -2129,7 +2113,6 @@
         <image name="facebook3" width="32" height="32"/>
         <image name="favourite" width="32" height="32"/>
         <image name="heart" width="128" height="128"/>
-        <image name="luanch" width="128" height="128"/>
         <image name="search" width="30" height="32"/>
         <image name="share" width="128" height="128"/>
     </resources>
